--- a/01-elementos-pre-textuais/agradecimentos.tex
+++ b/01-elementos-pre-textuais/agradecimentos.tex
@@ -12,7 +12,7 @@ Agradeço a Rosinei, por tudo. Aos meus amigos, por todas as conversas e todos o
 
 Ao meu orientador Tales Argolo, pela paciência e apoio. À professora Anolan, pela ajuda e direção. A meus colegas de trabalho, em especial para minha supervisora Paula pela compreensão e apoio. Sem essas pessoas eu não teria conseguido. Muito obrigada.
 
-A todos os meus professores do CEFET e ao CEFET, pela oportunidade de desenvolvimento acadêmico, profissional e pessoal.
+A todos os meus professores do CEFET e ao CEFET e a FAPEMIG, pela oportunidade de desenvolvimento acadêmico, profissional e pessoal.
 
 Obrigada a todos.   
 \end{agradecimentos}
