--- a/01-elementos-pre-textuais/resumo-pt.tex
+++ b/01-elementos-pre-textuais/resumo-pt.tex
@@ -4,7 +4,8 @@
 
 \begin{resumo}
 
-Com o avanço da tecnologia e a participação cada vez mais frequente de robôs na nossa sociedade, os estudos na área da robótica vem ganhando ênfase e vem promovendo e conquistando seu espaço no mundo contemporâneo. Além de fornecer soluções cada vez melhores e mais baratas para indústria, ela vem inovando na interação das pessoas com o resto do mundo. Do ponto de vista da robótica móvel, existe uma grande área de atuação e problemas que podem ser solucionados de forma a facilitar e proteger a vida das pessoas. Este trabalho tem como objetivo o estudo de estratégias de controle de formação, assim como, a implementação dessas estratégias em uma plataforma de relativo baixo custo e didática. As duas estratégias a serem implementadas neste trabalho consistem em sincronismo em paralelo de uma frota de robôs, onde eles devem se alinhar paralelamente e seguir se deslocando em linha reta, como em um problema de varredura em paralelo, e a outra estratégia é fazer com que a frota de robôs localize e rodeie um alvo e se distribua de forma balanceada de acordo com o número de robôs da frota. Neste trabalho não se teve como intuito a implementação de um tratamento de colisão entre os diferentes robôs, nem mesmo se pretendeu interagir com o ambiente e evitar a  colisão com obstáculos externos. Para cumprir com os objetivos deste trabalho, foi projetado um sistema de controle em cascata e foram realizados diversos experimentos com diferentes controladores. Os resultados mostram que os \emph{encoders} da própria plataforma utilizados para realizar a odometria do robô são suficientemente precisos para que sejam utilizados no sistema de localização dos robôs e que as estratégias adotadas foram eficientes para que o time de robôs não só se alinhasse paralelamente, como também localizasse e circulasse um alvo reajustando a sua configuração em função do número de robôs.
+Com o avanço da tecnologia e a participação cada vez mais frequente de robôs na nossa sociedade, os estudos na área da robótica vem ganhando ênfase e vem promovendo e conquistando seu espaço no mundo contemporâneo. %Além de fornecer soluções cada vez melhores e mais baratas para indústria, ela vem inovando na interação das pessoas com o resto do mundo. 
+Do ponto de vista da robótica móvel, existe uma grande área de atuação e problemas que podem ser solucionados de forma a facilitar e proteger a vida das pessoas. Este trabalho tem como objetivo o estudo de estratégias de controle de formação, assim como, a implementação dessas estratégias em uma plataforma de relativo baixo custo e didática. O controle de formação é essencial para sistemas robóticos multiagente pois permite que cada robô esteja em seu devido lugar no momento certo. Existem diversas maneiras de se implementar um sistema como este, tanto do ponto de vista do sistema distribuído e sua rede de comunicação, quanto do ponto de vista de controle e realimentação das malhas. Foram escolhidos dois tipos de formações diferentes e uma estratégia que pode ser adaptada para ambos os problemas. Os dois problemas abordados neste trabalho consistem em sincronismo em paralelo de uma frota de robôs, em que eles devem se alinhar paralelamente e seguir se deslocando em linha reta, como em um problema de varredura em paralelo, e o outro problema é fazer com que a frota de robôs localize e circule um alvo e se distribua de forma balanceada de acordo com o número de robôs da frota. Neste trabalho não se teve como intuito a implementação de um tratamento de colisão entre os diferentes robôs, nem mesmo se pretendeu interagir com o ambiente e evitar a  colisão com obstáculos externos. Para cumprir com os objetivos deste trabalho, foi projetado um sistema de controle em cascata e foram realizados diversos experimentos com diferentes controladores. Os resultados mostram que os \emph{encoders} da própria plataforma utilizados para realizar a odometria do robô são suficientemente precisos para que sejam utilizados no sistema de localização dos robôs e que as estratégias adotadas foram eficientes para que o time de robôs não só se alinhasse paralelamente, como também localizasse e circulasse um alvo reajustando a sua configuração em função do número de robôs.
 
 \textbf{Palavras-chave}: Estratégias de controle de formação. Robótica móvel. Lego Mindstorms. 
 \end{resumo}
