--- a/02-elementos-textuais/resultados.tex
+++ b/02-elementos-textuais/resultados.tex
@@ -1,9 +1,9 @@
 \chapter{Resultados }
 \label{chap:resultados}
 
-Após a realização de todas as simulações e testes, foram aplicadas as estratégias para resolução de ambos os problemas em uma frota de dois robôs reais. Para a resolução do primeiro problema , utilizou-se somente o controlador polinomial na malha interna e foi adotado a \autoref{eq:velP1} para estabelecer a velocidade desejada a ser aplicada nos motores. No mais, as informações trocadas entre as malhas externas foi apenas a posição dos robôs. 
+Após a realização de todas as simulações e testes, foram aplicadas as estratégias para resolução de ambos os problemas em uma frota de dois robôs reais. Para a resolução do primeiro problema\footnote{Os códigos-fonte para o primeiro problema podem ser acessados em: https://github.com/MarianaAthayde/tcc/tree/master/Implementações/Implementações - Consolidadas/Problema1}, utilizou-se somente o controlador polinomial na malha interna e foi adotado a \autoref{eq:velP1} para estabelecer a velocidade desejada a ser aplicada nos motores. No mais, as informações trocadas entre as malhas externas foi apenas a posição dos robôs. 
 
-Como pode-se observar na Figura \ref{fig:sP12} e \ref{fig:P12Erro}, a estratégia utilizada é suficientemente adequada para resolução do problema. Na \autoref{fig:P12Erro}, é mostrado o erro do sistema convergindo para zero, ou seja, a distância entre os robôs reduzindo conforme eles se aproximam, já na \autoref{fig:P12Ini}, mostra a trajetória feita pelos robôs que seguem da direita para a esquerda. Além disso, observando a \autoref{fig:sP13}, é possível notar que devido a imprecisão dos controladores, tem-se um pequeno deslocamento lateral em ambos os robôs que é de aproximadamente $2$ centímetros a cada metro deslocado, o que é aceitável.
+Como pode-se observar na Figura \ref{fig:sP12} e \ref{fig:P12Erro}, a estratégia utilizada é suficientemente adequada para resolução do problema, visto que na \autoref{fig:P12Erro}, é mostrado o erro do sistema convergindo para zero, ou seja, a distância entre os robôs reduzindo conforme eles se aproximam. Já na \autoref{fig:P12Ini}, mostra a trajetória feita pelos robôs que se alinham verticalmente e seguem paralelamente da direita para a esquerda. Além disso, observando a \autoref{fig:sP13}, é possível notar que devido a imprecisão dos controladores, tem-se um pequeno deslocamento lateral em ambos os robôs que é de aproximadamente $2$ centímetros a cada metro deslocado, o que é aceitável.
 
 \begin{figure}[!htb]
 	\centering
@@ -37,7 +37,7 @@ Como pode-se observar na Figura \ref{fig:sP12} e \ref{fig:P12Erro}, a estratégi
 	\label{fig:sP13}
 \end{figure}
 
-O segundo problema consiste em fazer uma frota de \emph{N} robôs localizar e circundar um alvo a uma distância \emph{R} e em um determinado período \emph{T}, que deve variar de acordo com o tamanho da frota e os robôs devem ter a mesma distância entre eles. Após realizados todos os testes e simulações, aplicou-se a estratégia em uma frota de dois robôs, colocando-os a mesma distância do alvo e em sentidos opostos, de maneira que eles não se colidissem quando o sistema ainda não estivesse estável. 
+O segundo problema\footnote{Os códigos-fonte da implementação do segundo problema podem ser acessados em: https://github.com/MarianaAthayde/tcc/tree/master/Implementações/Implementações - Consolidadas/Problema2} consiste em fazer uma frota de \emph{N} robôs localizar e circundar um alvo a uma distância \emph{R} e em um determinado período \emph{T}, que deve variar de acordo com o tamanho da frota e os robôs devem ter a mesma distância entre eles. Após realizados todos os testes e simulações, aplicou-se a estratégia em uma frota de dois robôs, colocando-os a mesma distância do alvo e em sentidos opostos, de maneira que eles não se colidissem quando o sistema ainda não estivesse estável. 
 
 Como pode ser visto na \autoref{eq:posDesejada_p2}, o cálculo da posição desejada para o segundo problema depende do tempo, devido a falta de sincronismo entre os relógios dos robôs, a posição desejada calculada pelos robôs pode apresentar erros na distribuição circular balanceada. Para contornar este problema, a solução encontrada foi passar para o outro robô o tempo do mestre. Desta forma, elimina-se o problema da falta de sincronismo entre os relógios. 
 
