--- a/02-elementos-textuais/trab-relacionados.tex
+++ b/02-elementos-textuais/trab-relacionados.tex
@@ -1,6 +1,6 @@
 %
 % Documento: Trabalhos Relacionados
-%
+
 \chapter{Trabalhos Relacionados}
 \label{chap:trabalhosRelacionados}
 Com o interesse cada vez mais crescente na área de robótica móvel e sistemas multiagente, tem havido uma demanda cada vez maior para estudos nestas áreas. O \emph{Lego Mindstorms\textregistered}, devido as suas limitações e devido a limitação do seu protocolo \emph{bluetooth} com a topologia "Mestre e Escravo", não é uma plataforma muito interessante de aplicação desses conceitos , entretanto, é uma excelente plataforma a ser utilizada nos estudos dos mesmos. Isto por que, é uma plataforma acessível, existe muita documentação auxiliar, muitos trabalhos relacionados a respeito e é muito simples de ser utilizada. %Logo, vê-se muitos trabalhos relacionados a este, que envolvem o estudo da robótica móvel e de sistemas multiagente.
@@ -14,4 +14,6 @@ Entre outros trabalhos relacionados a este podemos citar, \citeonline{BDCMGA09} 
 Utilizando-se de uma unidade central de controle, ele primeiro propõe quatro robôs em pontos diferentes do espaço, orientados em qualquer sentido à circular um ponto qualquer no espaço, com auxilio da \emph{webcam} e do computador (unidade central de comando). O que se aproxima bastante deste trabalho, diferindo-se principalmente no que diz respeito à \emph{webcam} como o principal elemento do sistema de localização. %sensor de alimentação do sistema.
 
 Outro trabalho também muito interessante que pode-se citar é o de \citeonline{casini2011lego}, no qual os autores propõem um laboratório remoto utilizando o \emph{LEGO  Mindstorms\textregistered}. O trabalho se resume  a um laboratório remoto para estudos de robótica móvel, em que tem-se um espaço de cerca de 13 metros quadrados que é filmado por duas câmeras, onde os robôs ficam e podem se movimentar. Foi então desenvolvida uma interface gráfica de acesso \emph{online} ao laboratório, através da qual os usuários podem acessar e utilizar o laboratório para o estudo de robótica móvel. 
+
+Além desses trabalhos que utilizam o \emph{Lego Mindstorms\textregistered}, existe uma tese de doutorado do \citeonline{JTA13} que consiste em simular uma frota de \emph{VANT} que devem primeiro rastrear um círculo paralelo ao plano $xy$ em uma dada latitude diferente para cada robô, depois eles devem se distribuir de forma que suas projeções no plano $xy$ estejam balanceadas e após esta etapa, devem convergir para a mesma latitude a fim de rastrear o círculo. O que é bem próximo a um dos problemas resolvidos neste trabalho. 
 
