--- a/refbase.bib
+++ b/refbase.bib
@@ -188,3 +188,11 @@
 	year={2005},
 	school={Universidade Federal do Rio Grande do Norte}
 }
+
+
+@phdthesis{jesus2013,
+	title={Estrat{\'e}gias de Guiagem e Coopera{\c{c}}{\~a}o de Rob{\^o}s A{\'e}reos Sujeitos a Restri{\c{c}}{\~o}es nas Entradas e/ou nos Estados},
+	author={Jesus, Tales Argolo},
+	year={2013},
+	school={Universidade Federal de Minas Gerais}
+}
